# general-at-stack

./: .gitignore  Makefile  SIM7600X-H.h  at-common.h  at-control.c  at-interface.h  at-recv.c  configure.ac  main  main.c  modem-app.service  weg-modemapp.service
etc/ppp/: ip-down
etc/ppp/peers/: simpeer
src/: Makefile  Makefile.am  Makefile.old  SIM7100X.h  SIM7600X-H.h  at-common.h  at-control.c  at-interface.h  at-queue.c  at-recv.c  example.txt  main.c  ppp_procedure.c  ppp_procedure.h  sim7100x.c  sim7100x.h  sim7600x.c  sim7600x.h  system.c  tags  test  unix_client.c  unix_client.h
utils/: tty_info.sh
